ansi2/src/snapshots/ansi2__test__style.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Token {
            sgr: Char(
                'a',
            ),
            range: (
                0,
                1,
            ),
        },
        Token {
            sgr: Char(
                'a',
            ),
            range: (
                1,
                2,
            ),
        },
        Token {
            sgr: Char(
                'a',
            ),
            range: (
                2,
                3,
            ),
        },
        Token {
            sgr: Bold,
            range: (
                3,
                7,
            ),
        },
        Token {
            sgr: Char(
                'b',
            ),
            range: (
                7,
                8,
            ),
        },
        Token {
            sgr: Char(
                'o',
            ),
            range: (
                8,
                9,
            ),
        },
        Token {
            sgr: Char(
                'l',
            ),
            range: (
                9,
                10,
            ),
        },
        Token {
            sgr: Char(
                'd',
            ),
            range: (
                10,
                11,
            ),
        },
        Token {
            sgr: ColorReset,
            range: (
                11,
                15,
            ),
        },
        Token {
            sgr: Char(
                ' ',
            ),
            range: (
                15,
                16,
            ),
        },
        Token {
            sgr: Dim,
            range: (
                16,
                20,
            ),
        },
        Token {
            sgr: Char(
                'd',
            ),
            range: (
                20,
                21,
            ),
        },
        Token {
            sgr: Char(
                'i',
            ),
            range: (
                21,
                22,
            ),
        },
        Token {
            sgr: Char(
                'm',
            ),
            range: (
                22,
                23,
            ),
        },
        Token {
            sgr: ColorReset,
            range: (
                23,
                27,
            ),
        },
        Token {
            sgr: Char(
                ' ',
            ),
            range: (
                27,
                28,
            ),
        },
        Token {
            sgr: Italic,
            range: (
                28,
                32,
            ),
        },
        Token {
            sgr: Char(
                'i',
            ),
            range: (
                32,
                33,
            ),
        },
        Token {
            sgr: Char(
                't',
            ),
            range: (
                33,
                34,
            ),
        },
        Token {
            sgr: Char(
                'a',
            ),
            range: (
                34,
                35,
            ),
        },
        Token {
            sgr: Char(
                'l',
            ),
            range: (
                35,
                36,
            ),
        },
        Token {
            sgr: Char(
                'i',
            ),
            range: (
                36,
                37,
            ),
        },
        Token {
            sgr: Char(
                'c',
            ),
            range: (
                37,
                38,
            ),
        },
        Token {
            sgr: Italic,
            range: (
                38,
                42,
            ),
        },
        Token {
            sgr: Char(
                ' ',
            ),
            range: (
                42,
                43,
            ),
        },
        Token {
            sgr: Underline,
            range: (
                43,
                47,
            ),
        },
        Token {
            sgr: Char(
                'u',
            ),
            range: (
                47,
                48,
            ),
        },
        Token {
            sgr: Char(
                'n',
            ),
            range: (
                48,
                49,
            ),
        },
        Token {
            sgr: Char(
                'd',
            ),
            range: (
                49,
                50,
            ),
        },
        Token {
            sgr: Char(
                'e',
            ),
            range: (
                50,
                51,
            ),
        },
        Token {
            sgr: Char(
                'r',
            ),
            range: (
                51,
                52,
            ),
        },
        Token {
            sgr: Char(
                'l',
            ),
            range: (
                52,
                53,
            ),
        },
        Token {
            sgr: Char(
                'i',
            ),
            range: (
                53,
                54,
            ),
        },
        Token {
            sgr: Char(
                'n',
            ),
            range: (
                54,
                55,
            ),
        },
        Token {
            sgr: Char(
                'e',
            ),
            range: (
                55,
                56,
            ),
        },
        Token {
            sgr: Underline,
            range: (
                56,
                60,
            ),
        },
    ],
)
