ansi2/src/snapshots/ansi2__test__svg2-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: ' ',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: '3',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: '9',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: ';',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: '4',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: '0',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: 'm',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Black,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: ' ',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Red,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: ' ',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Red,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: '3',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Red,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: '9',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Red,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: ';',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Red,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: '4',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Red,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: '1',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Red,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: 'm',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
        ],
    ],
    w: 16,
    h: 1,
}
