ansi2/src/snapshots/ansi2__test__svg2-3.snap
---
source: ansi2/src/lib.rs
expression: canvas.minify()
---
[
    [
        Node {
            bg_color: Color8(
                Black,
            ),
            color: Default,
            bold: false,
            blink: false,
            text: " 39;40m ",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
        },
        Node {
            bg_color: Color8(
                Red,
            ),
            color: Default,
            bold: false,
            blink: false,
            text: " 39;41m",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
        },
    ],
]
