ansi2/src/snapshots/ansi2__test__test.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Sgr4(
            0,
            5,
            35,
            45,
        ),
    ],
)
