ansi2/src/snapshots/ansi2__test__vitest-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                char: ' ',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                char: 'B',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                char: 'E',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                char: 'N',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                char: 'C',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                char: 'H',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                char: ' ',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                char: ' ',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                char: 'S',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                char: 'u',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                char: 'm',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                char: 'm',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                char: 'a',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                char: 'r',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                char: 'y',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
        ],
    ],
    w: 16,
    h: 1,
}
