ansi2/src/snapshots/ansi2__test__vitest_bench-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                text: "B",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                text: "E",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                text: "N",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                text: "C",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                text: "H",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Color8(
                    Cyan,
                ),
                color: Color8(
                    White,
                ),
                bold: true,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: " ",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                text: "S",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                text: "u",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                text: "m",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                text: "m",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                text: "r",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Cyan,
                ),
                bold: false,
                blink: false,
                text: "y",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
        ],
    ],
    w: 16,
    h: 1,
}
